force-app/main/default/objects/Dealer_Performance_Review__c/Dealer_Performance_Review__c.object-meta.xml
<CustomObject>
    <label>Dealer Performance Review</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Dealer Performance Review Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Performance Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>