force-app/main/default/objects/Dealer_Performance_Review__c/fields/Dealer_Business_Planning__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Business_Planning__c</fullName>
    <label>Dealer Business Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Low Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>