force-app/main/default/objects/Dealer_Performance_Review__c/fields/Dealer_Implementation_Description__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Implementation_Description__c</fullName>
    <label>Dealer Implementation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>