force-app/main/default/objects/Dealer_Performance_Review__c/fields/Dealer_Quality__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Quality__c</fullName>
    <label>Dealer Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>